
[tool.poetry]
name = "inklink"
version = "0.1.0"
description = "Bring AI to your reMarkable tablet"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
  { include = "inklink", from = "src" }
]

[tool.poetry.dependencies]
# Google API clients are optional; install manually if needed
# google-api-python-client = "^2.89.0"
# google-auth = "^2.16.0"
# google-auth-oauthlib = "^0.10.0"
python = "^3.10"
qrcode = "^7.3"
Pillow = "^10.3.0"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.1"
readability-lxml = "^0.8.1"
PyPDF2 = "^3.0.0"
pdf2image = "^1.16.0"
markdown = "^3.4.1"
fastapi = "^0.95.2"
uvicorn = { version = "^0.23.2", extras = ["standard"] }
python-multipart = "^0.0.18"
httpx = "^0.24.1"
rmscene = "^0.4.0"
cryptography = "^44.0.3"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
black = "^24.3.0"
flake8 = "^6.0"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
inklink = "inklink.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
