
[tool.poetry]
name = "inklink"
version = "0.1.0"
description = "Bring AI to your reMarkable tablet"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
  { include = "inklink", from = "src" }
]

[tool.poetry.dependencies]
# Google API clients are optional; install manually if needed
# google-api-python-client = "^2.89.0"
# google-auth = "^2.16.0"
# google-auth-oauthlib = "^0.10.0"
python = "^3.10"
qrcode = "^8.2"
Pillow = "^11.2.1"
requests = "^2.28.0"
beautifulsoup4 = "^4.11.1"
readability-lxml = "^0.8.4"
PyPDF2 = "^3.0.0"
pdf2image = "^1.16.0"
markdown = "^3.4.1"
fastapi = "^0.115.12"
uvicorn = { version = "^0.34.2", extras = ["standard"] }
python-multipart = "^0.0.20"
httpx = "^0.28.1"
rmscene = "^0.7.0"
cryptography = "^44.0.3"
openai = "^1.78.1"
ebooklib = "^0.18.0"
neo4j = "^5.18.0"
sentence-transformers = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^4.1.0"
black = "^25.1.0"
flake8 = "^7.2"
pre-commit = "^4.2.0"
mypy = "^1.15.0"

[tool.poetry.scripts]
inklink = "inklink.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
